environment variable example value change

--- a/.env_example
+++ b/.env_example
@@ -3,6 +3,6 @@ APP_PORT=8000
 
 PG_HOST=127.0.0.1
 PG_USERNAME=postgres
-PG_PASSWORD=s1sb4ng_4dm1n
+PG_PASSWORD=postgres
 PG_DBNAME=storedb
 PG_PORT=5432
